# lottery

./: .env  .gitignore  Dockerfile  README.md  docker-compose-db-test.yml  docker-compose-openapi-generate.yml  docker-compose-test-db.yml  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
initdb.d/: ddl  dml  init.sh
src/: App.vue  constant.ts  error.ts  local-storage-lottery.ts  lottery-data.ts  main.ts  router.ts  style.css  vite-env.d.ts
src/components/: AccountInput.vue  AccountPasswordInput.vue  BackButton.vue  ContactUs.vue  FlexTextarea.vue  GoPublicView.vue  HighlightText.vue  HomeButton.vue  Lottery.vue  LotteryList.vue  (+12 more)
srv/: .env  pyproject.toml
srv/api/: database.py  db.py  main.py  models.py
srv/api/crud/: access_token.py  access_tokens.py  lotteries.py  signup_token.py  signup_tokens.py  token_hash.py  tokens.py  users.py
srv/api/routers/: lotteries.py  tokens.py  users.py
srv/api/schemas/: access_token.py  access_tokens.py  common.py  lotteries.py  signup_token.py  signup_tokens.py  tokens.py  users.py
srv/core/: config.py  db.py  mail.py
srv/migration/: db.py  env.py  models.py
srv/migration/versions/: 1a1c47f2a13b_.py  2a31a4d25d30_.py  5a2bc86fb0ed_.py  66688dfabe89_.py  6c8a4d5e9287_.py  6e60ff2a9606_.py  9232a8d5b8b1_.py  9b0dc2df1a91_.py  ab252593dc45_.py  c39214f59196_.py  c491bb061514_.py  c50fdbbcfb6a_.py  e3528c158b12_.py  e4135c3ba959_.py  e48945ebbeb2_.py  e4ae7c02dda8_.py  f44f84a3f7fa_.py
srv/test/: client.py  conftest.py  test_integration.py  test_main.py  test_signup_step1.py  test_users.py
(+14 files in other folders)
